welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {
^PictureMono2:1: error: expected start of definition
override def run() {
         ^PictureMono2:10: error: expected class or object definition
def marquerSol(){
^PictureMono2:15: error: expected class or object definition
def faireV(){
^PictureMono2:30: error: expected class or object definition
def faireMotif(){
^PictureMono2:36: error: expected class or object definition
def faire3Motifs(){
^